--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<p style="flex: 1; padding: 20px; text-align: left;">
 									Hi! I am Jan. 
 
-									Born and raised in Tübingen, I am currently  on a <a href="https://depart.moe.edu.tw/NY/cp.aspx?n=C18D75289A0D07E3&s=767040920EBF5D27">Huayu Enrichment Scholarship</a> stay in Taiwan, studying Taiwanese Mandarin at <a href="https://www.fcu.edu.tw/en/">Feng Chia University</a>. After initially pursuing studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>.
+									Born and raised in Tübingen, I am currently  on a <a href="https://depart.moe.edu.tw/NY/cp.aspx?n=C18D75289A0D07E3&s=767040920EBF5D27" target="_blank">Huayu Enrichment Scholarship</a> stay in Taiwan, studying Taiwanese Mandarin at <a href="https://www.fcu.edu.tw/en/" target="_blank">Feng Chia University</a>. After initially pursuing studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>.
 									<br>
 									<br>
 									If you want to know more about my <i>academic background & work experience</i>, you can have a look at it <a href="#work">here</a>.<br>
@@ -110,7 +110,7 @@
 							</header>
 							<p style="text-align: left">
 								<b><u>Bachelor</u></b><br>
-							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalised communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analysing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the district library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for Diversity-Oriented Opening</a> and topped it off with a Bachelor's thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
+							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse and empower marginalised communities. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analysing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the district library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for Diversity-Oriented Opening</a> and topped it off with a Bachelor's thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
 							<br>
 
 							<b><u>Master</u></b><br>
@@ -118,12 +118,12 @@
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs, starting out from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to now being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hsu-hh.de/en/">Helmut-Schmidt Universität Universität der Bundeswehr Hamburg</a>.<br>
-							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organising lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
+							I have worked in a diverse range of jobs, starting out from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to now being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hsu-hh.de/en/" target="_blank">Helmut-Schmidt Universität Universität der Bundeswehr Hamburg</a>.<br>
+							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium" target="_blank">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organising lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
 							<br>
 
 							<b><u>Languages</u></b><br>
-							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in learning Taiwanese Mandarin at the <a href="https://clc.fcu.edu.tw/">Language Center of Feng Chai University</a> in Taichung, Taiwan. So 如果你能理解這個，我熱烈歡迎你來到我的網站.<br>
+							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in learning Taiwanese Mandarin at the <a href="https://clc.fcu.edu.tw/" target="_blank">Language Center of Feng Chai University</a> in Taichung, Taiwan. So 如果你能理解這個，我熱烈歡迎你來到我的網站.<br>
 							<br>
 							If you are interested in a more formal CV, feel free to download the latest version <a href="./docs/weberjanraoul_cv.pdf" target="_blank">here</a>.
 							</p>
@@ -138,10 +138,10 @@
 							<header>
 								<h2>Publications</h2>
 								<p style="text-align: left">
-							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. <a href="https://pages.cms.hu-berlin.de/ibi/BHR/">Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft</a>, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
+							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. <a href="https://pages.cms.hu-berlin.de/ibi/BHR/" target="_blank">Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft</a>, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
 
 								<p style="text-align: left">
-							Weber, Jan Raoul (upcoming). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres">Information Research</a> X</i>(X). Accepted, copyediting stage.
+							Weber, Jan Raoul (upcoming). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres" target="_blank">Information Research</a> X</i>(X). Accepted, copyediting stage.
 								
 							</header>
 
